--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -3,3 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db-name
 spring.datasource.username=username
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
+# JWT
+ptd-manager.jwtCookieName=ptd-manager
+ptd-manager.jwtSecret=ptdManagerSecretKey
+ptd-manager.jwtExpirationMs=86400000
