--- a/src/test/resources/application-it.properties
+++ b/src/test/resources/application-it.properties
@@ -3,7 +3,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=sa
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.max-file-size=50MB
 # JWT
